k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnimals-app-service
  namespace: staging
  labels:
    app: learnimals-app
    environment: staging
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: 'nlb'
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
spec:
  selector:
    app: learnimals-app
    environment: staging
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: learnimals-app-headless
  namespace: staging
  labels:
    app: learnimals-app
    environment: staging
spec:
  selector:
    app: learnimals-app
    environment: staging
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  clusterIP: None
